--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -34,6 +34,8 @@ $color__alpha-dark05: rgba( 0,0,0,.05 );
 $color__alpha-light: rgba( 255,255,255,.1 );
 $color__white: #fff;
 
+$color__stars: #ffc107;
+
 // Border radius
 $site__border-radius: .25rem;
 
