--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -16,4 +16,4 @@
 /*--------------------------------------------------------------
 ## Posts Navigation
 --------------------------------------------------------------*/
-@import "post-navigation";
+@import "posts-navigation";
