--- a/sass/components/site/primary/_posts-and-pages.scss
+++ b/sass/components/site/primary/_posts-and-pages.scss
@@ -6,13 +6,19 @@
 	background-color: $color__white;
 	padding: $gutter__width;
 	margin-bottom: $gutter__width;
+	box-shadow: 0 8px 16px rgba( 0,0,0,.1 );
 	.sticky &{
 		background-color: #673ab7;
 		color: rgba( 255,255,255,.5 );
 	}
+
+	@include respond-to( medium ){
+		margin-bottom: $gutter__width*2;
+	}
+
 	@include respond-to( large ){
-		padding-left: $gutter__width*4;
-		padding-right: $gutter__width*4;
+		padding: $gutter__width*4;
+		padding-bottom: $gutter__width*2;
 	}
 }
 
@@ -25,6 +31,10 @@
 	display: block;
 	position: relative;
 	overflow: hidden;
+	margin-top: -$gutter__width;
+	margin-left: -$gutter__width;
+	margin-right: -$gutter__width;
+	margin-bottom: $gutter__width;
 	img {
 		display: block;
 		vertical-align: bottom;
@@ -62,6 +72,11 @@
 		@include respond-to( medium ) {
 			max-width: 100%;
 		}
+	}
+	@include respond-to( large ){
+		margin-top: -$gutter__width*4;
+		margin-left: -$gutter__width*4;
+		margin-right: -$gutter__width*4;
 	}
 }
 
