--- a/sass/components/layout/_layout.scss
+++ b/sass/components/layout/_layout.scss
@@ -2,6 +2,10 @@
 
 @import "footer";
 
+.site {
+	overflow: hidden;
+}
+
 .container {
 	width: 100%;
 	padding-right: $gutter__width;
@@ -41,7 +45,7 @@
 		#primary {
 			float: left;
 			width: 100%;
-			padding-right: 330px;
+			padding-right: 320px;
 		}
 		#secondary {
 			float: right;
@@ -54,7 +58,7 @@
 		#primary {
 			float: right;
 			width: 100%;
-			padding-left: 330px;
+			padding-left: 320px;
 		}
 		#secondary {
 			float: left;
