--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -79,7 +79,7 @@
 		top: 0;
 		position: absolute;
 		left: 0;
-		color: $color__link;
+		color: $color__stars;
 	}
 }
 
@@ -269,11 +269,15 @@ p.no-comments,
 	background-color: $color__white;
 	border-left: 5px solid  $woocommerce__color-success;
 	clear: both;
+	color: $color__text-secondary;
 	@include font-size(0.875);
+	line-height: 1.8;
 	overflow: hidden;
-	margin-bottom: 1.5rem;
-	padding: 1rem;
+	margin-bottom: $gutter__width;
+	padding: $gutter__width;
+	position: relative;
 	box-shadow: inset 0 0 0 1px $color__alpha-dark;
+	border-radius: .25rem;
 	li {
 		list-style: none outside !important;
 		padding-left: 0 !important;
