--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -26,6 +26,11 @@ $woocommerce__color-info: #3D9CD2;
 @import "plugins/woocommerce/checkout";
 
 /**
+ * My Account
+ */
+@import "plugins/woocommerce/my-account";
+
+/**
  * General WooCommerce components
  */
 @import "plugins/woocommerce/components";
