--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -175,10 +175,11 @@ ul.products {
   position: relative;
   padding: 10px;
   transition: all ease-in-out 0.25s;
-  border-radius: .5rem;
+  border-radius: .25rem;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); }
   .entry-product:hover {
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25); }
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+    z-index: 1; }
 
 .baltic-product-thumbnail {
   display: block;
