--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -98,10 +98,11 @@ ul.products {
 	position: relative;
 	padding: $gutter__width;
 	transition: all ease-in-out 0.25s;
-	border-radius: .5rem;
+	border-radius: .25rem;
 	box-shadow: 0 8px 16px rgba( 0,0,0,.1 );
 	&:hover {
 		box-shadow: 0 8px 32px rgba( 0,0,0,.25 );
+		z-index: 1;
 	}
 }
 
